Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 6.3
-
Fix Version/s: 6.4.0 Beta1
-
Component/s: QML: Declarative and Javascript Engine
-
Labels:None
-
Commits:c86b340f47 (qt/qtdeclarative/dev) c86b340f47 (qt/tqtc-qtdeclarative/dev) 9d22088d93 (qt/qtdeclarative/dev) 9d22088d93 (qt/tqtc-qtdeclarative/dev) 1611f5dc96 (qt/qtdeclarative/6.4) 1611f5dc96 (qt/tqtc-qtdeclarative/6.4)
Description
Is there a way to disable the warning when we don't care if deferred execution works or not (because the item can't be overridden by the user)?
I'm running into it with https://codereview.qt-project.org/c/qt/qtdeclarative/+/379334/24/src/quickdialogs2/quickdialogs2quickimpl/qml/FolderDialog.qml#99, but I need it to have an id, so that the attached breadcrumbBar property can refer to it.
Minimal example:
import QtQuick import QtQuick.Controls ApplicationWindow { id: root width: 600 height: 600 visible: true Control { contentItem: Column { Item { id: breadcrumbBar } } } }
The warning is:
Binding on contentItem is not deferred as requested by the DeferredPropertyNames class info because one or more of its sub-objects contain an id
Attachments
Issue Links
- relates to
-
QTBUG-104090 The dialogs in QtQuick.Dialogs are printing out warnings when opened
-
- Reported
-
- resulted from
-
QTBUG-98439 "Binding on contentItem is not deferred as requested by the DeferredPropertyNames class info because it constitutes a group property" when instantiating ScrollBar
-
- Closed
-